--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,17 +1,5 @@
-.Home{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-    align-items: center;
-    height:60vh;
-    
-}
-.Home button{
-  font-size: 40px;
-  padding: 50px;
-  margin: 100px;
 
-}
+
 
 
 
@@ -32,6 +20,7 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  font-size: 1.5em;
 }
 
 .button-85:before {
@@ -86,8 +75,13 @@
   border-radius: 10px;
 }
 
-
-
+@media (max-width: 768px) {
+  
+  .button-85 {
+    font-size: 1em;
+    padding: 0.5em 1.5em;}
+    
+}
 
 
 
@@ -295,13 +289,26 @@
   padding: 20px; /* Padding for grid items */
   text-align: center; /* Center align text */
   color: white; /* Text color */
-  cursor:pointer;
+  cursor: pointer;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Box shadow for grid items */
   transition: transform 0.3s ease-in-out; /* Smooth transition */
 }
 
 .grid-item:hover {
   transform: scale(1.05); /* Scale grid item on hover */
+}
+
+/* Responsive layout for smaller screens */
+@media (max-width: 1200px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr); /* Two columns for medium screens */
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr; /* One column for small screens */
+  }
 }
 
 
@@ -351,3 +358,28 @@
   transform: translateY(2px);
 }
 
+
+
+
+/* Loader styles */
+/* HTML: <div class="loader"></div> */
+.loader {
+  color: #000;
+  width: 6px;
+  aspect-ratio: 1;
+  border-radius: 50%; 
+  animation:
+    l37-1 .75s infinite linear alternate,
+    l37-2 1.5s  infinite linear; 
+}
+@keyframes l37-1 {
+  0%,
+  20% {box-shadow:30px 0 0 3px, 10px 0 0 3px, -10px 0 0 3px,-30px 0 0 3px}
+  60%,
+  100% {box-shadow:12px 0 0 3px, 14px 0 0 6px, -14px 0 0 6px,-12px 0 0 3px}
+}
+
+@keyframes l37-2 {
+  0%,25%   {transform: rotate(0)}
+  50%,100% {transform: rotate(.5turn)}
+}
