--- a/myapp/src/points.css
+++ b/myapp/src/points.css
@@ -32,7 +32,7 @@
 .testing h1 {
   position: relative;
   z-index: 2;
-  margin-bottom: 400px;
+  margin-bottom: 5%;
   font-size: 10em;
   letter-spacing: 15px;
   text-transform: uppercase;
@@ -48,4 +48,12 @@
                9px 9px hsl(50, 50%, 29%),
                10px 10px hsl(50, 50%, 28%),
                10px 10px 30px rgba(0,0,0,.7),
+}
+
+@media (max-width: 768px) {
+  .testing h1 {
+    font-size: 20vw;
+    letter-spacing: 1.5vw;
+  }
+  
 }
